--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
   --bg-body: #242a32;
   --color-primary: #131219;
   --text--color:#f4f3f3;
+  --text-form:#92929D
+  --star-yellow:#ffbb3A;
 }
 
 html, body {
@@ -98,8 +100,63 @@ text-align: center;
   align-items:center;
   justify-content: center;
   border-radius: 50px;
+  border: 0;
 }
-.movies-btn :hover{
-background-color: #FA7FB7;
+.movies-btn:hover{
+background-color: #50C878;
+transition: 0.7s;
 }
+.container-score {
+padding: 40px 0;
+max-width: 480px;
+}
+.card-score-description{
+  background-color: var(--color-primary);
+  color: var(--text--color);
+  padding: 20px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0 0 8px 8px;
+}
+.movies-form-btn{
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.movies-form-group{
+  margin-bottom: 20px;
+}
+.movies-form-group-label{
+  font-size: 12px;
+  color: #929292;
+}
+.card-score-description h3{
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
 
+}
+.movies-card-description-star{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.movies-card-description-star h4{
+  font-size: 16px;
+  font-weight: 700;
+  color: var(#ffbb3a);
+}
+.movies-card-description-star img{
+  width: 22px;
+  margin-bottom: 10px;
+}
+.movies-card-description-star P{
+  font-size: 12PX;
+  font-weight: 400;
+  color: var(--text-form);
+  margin-bottom: 10px;
+}
